docs(verification): P5-A AC4.13 profiles real run, AC6.6 pairs, S-M1 missing-target run
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BzjDikL2wqunaSiMjefimU